--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "bootstrap": "~3.2.0",
         "flat-ui": "2.2.0",
-        "swfobject": "2.2"
+        "swfobject": "2.2",
+        "html5shiv": "3.7.2",
+        "respond": "1.4.2"
     }
 }
