--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 		"twig/twig": ">=1.8,<2.0-dev",
         "symfony/twig-bridge": "~2.3",
  		"guzzlehttp/guzzle": "~4.0",
- 		"zendframework/zend-cache": "~2"
+ 		"zendframework/zend-cache": "~2",
+        "aptoma/twig-markdown": "0.2.*",
+        "michelf/php-markdown": "~1.3"
     },
     "autoload": {
         "psr-4": {
