--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
  		"guzzlehttp/guzzle": "~4.0",
  		"zendframework/zend-cache": "~2",
         "aptoma/twig-markdown": "0.2.*",
-        "michelf/php-markdown": "~1.3"
+        "michelf/php-markdown": "~1.3",
+        "Respect/Validation" : "~1.1"
     },
     "autoload": {
         "psr-4": {
